7/23/12 simplify a line only if its rise and run are who numbers
7/23/12 modify *EquationFactory interfaces so that equation simplification is optional
7/23/12 move responsibility for equation simplification into the model
7/23/12 rename nodes for interactive equations
# 0.00.21 (65997) Jul 18, 2012
7/18/12 tweak game reward parameters
7/18/12 add images of simplified equations to game reward
7/18/12 flatten PointToolNode hierarchy
7/18/12 make PointToolNode responsible for generation of game reward images
7/18/12 add point coordinates to point tools in the game reward
# 0.00.20 (65976) Jul 18, 2012
7/18/12 dev version to demonstrate top-level flow of game and reward
7/17/12 use a consistent color for game buttons/instructions
7/17/12 save/restore the game reward node's animation state when deactivating/activating the game module
7/17/12 add "Developer->Test game reward" menu item
7/17/12 add graph images to game reward
7/17/12 add point tool images to game reward
7/16/12 configure game reward based on level
7/16/12 compute what a perfect score is
7/16/12 update bounds of game reward when the canvas is resized
7/16/12 encapsulate handling of "best scores"
7/16/12 play end-of-game sounds
7/16/12 add basic structure of game reward
7/13/12 implemented basic game flow between settings, play and results phases
7/13/12 set up basic "phases" of game, add dependency on common "games" module
# 0.00.19 (65067) Jun 14, 2012
6/14/12 first 2 tabs cleaned up, feature complete, all known issues addressed
6/14/12 fix jumpiness of slope manipulator that was happening when skipping over slope=0/0
6/14/12 fix graph tick marks to display integer values
6/13/12 when model adjusts slope to prevent undefined lines, send a sim-sharing model message
6/13/12 make equation spinners update correctly when they skip over zero value to prevent slope=0/0
6/12/12 add specialization of StraightLine that snaps its args to an integer grid